--- a/platforms/pwa/package.json
+++ b/platforms/pwa/package.json
@@ -1,14 +1,14 @@
 {
-  "name": "platforms-gallery-pwa",
+  "name": "platforms-pwa",
   "version": "1.0.0",
   "main": "index.js",
   "author": "Dany Dodson",
-  "description": "platforms-gallery-pwa",
+  "description": "platforms-pwa",
   "scripts": {
-    "build": "rm -rf build && NODE_ENV=production parcel build src/index.html --out-dir build/output --cache-dir build/cache --no-source-maps",
+    "build": "rm -rf build && NODE_ENV=production parcel build src/index.html -d build/bundle --cache-dir build/cache --no-source-maps",
+    "watch": "rm -rf build && parcel --port=7001 src/index.html -d build/output --cache-dir build/cache --no-source-maps",
     "predeploy": "yarn build",
-    "deploy": "./deploy.sh",
-    "watch": "parcel --port=7001 src/index.html"
+    "deploy": "./deploy.sh"
   },
   "dependencies": {
     "@types/react": "^16.8.0",
