--- a/services/nginx/Dockerfile
+++ b/services/nginx/Dockerfile
@@ -1,7 +1,6 @@
 FROM node:14 as builder
 
 RUN mkdir -p /app
-
 WORKDIR /app
 RUN git clone https://github.com/danydodson/seesee.git .
 
@@ -11,7 +10,10 @@ RUN yarn && yarn build
 FROM nginx:mainline-alpine
 
 RUN rm -rf /etc/nginx/default.conf
+
 COPY conf.d/default.conf /etc/nginx/default.conf
+COPY ./html/not-found.html /usr/share/nginx/html/not-found.html
+COPY ./includes/ /etc/nginx/includes/
 COPY --from=builder /app/platforms/pwa/build/output/ /usr/share/nginx/html/
 
 RUN chown -R nginx.nginx /usr/share/nginx/html/
