--- a/services/nginx/conf.d/default.conf
+++ b/services/nginx/conf.d/default.conf
@@ -4,30 +4,33 @@ events {
 }
 
 http {
-
+    
     server {
-
         listen 80 default_server;
         # listen [::]:80 default_server;
 
         root /usr/share/nginx/html;
-
         index index.html index.htm;
-
+        ##
+        # app
+        ##
         location / {
             try_files $uri /index.html;
         }
-
+        ##
+        # app/users
+        ##
         location /users {
             proxy_pass http://users_service:7101;
             # proxy_pass http://users_service:7201;
         }
-
+        ##
+        # app/listings
+        ##
         location /listings {
             proxy_pass http://listings_service:7100;
             # proxy_pass http://users_service:7200;
         }
-
         ##
         # Basic Settings
         ##
@@ -41,19 +44,16 @@ http {
         # server_name_in_redirect off;
         include /etc/nginx/mime.types;
         default_type application/octet-stream;
-
         ##
         # SSL Settings
         ##
         ssl_protocols TLSv1 TLSv1.1 TLSv1.2; # Dropping SSLv3, ref: POODLE
         ssl_prefer_server_ciphers on;
-
         ##
         # Logging Settings
         ##
         access_log /var/log/nginx/access.log;
         error_log /var/log/nginx/error.log;
-
         # ##
         # Gzip Settings
         # ##
@@ -65,12 +65,10 @@ http {
         gzip_buffers 16 8k;
         gzip_http_version 1.1;
         gzip_types text/plain text/css application/json application/javascript text/xml application/xml application/xml+rss text/javascript;
-
         ##
         # Virtual Host Configs
         ##
         # include /etc/nginx/conf.d/*.conf;
         # include /etc/nginx/sites-enabled/*;
-
     }
 }
