--- a/services/nginx/Dockerfile
+++ b/services/nginx/Dockerfile
@@ -12,8 +12,9 @@ FROM nginx:mainline-alpine
 RUN rm -rf /etc/nginx/default.conf
 
 COPY conf.d/default.conf /etc/nginx/default.conf
-COPY ./html/not-found.html /usr/share/nginx/html/not-found.html
-COPY ./includes/ /etc/nginx/includes/
+
+# COPY ./html/not-found.html /usr/share/nginx/html/not-found.html
+# COPY ./includes/ /etc/nginx/includes/
 COPY --from=builder /app/platforms/pwa/build/output/ /usr/share/nginx/html/
 
 RUN chown -R nginx.nginx /usr/share/nginx/html/
