--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -7,11 +7,8 @@ services:
 
   gateway_client:
     container_name: gateway_client
-    build: 
-      context: ..
-      dockerfile: gateway/client/Dockerfile
+    build: ./gateway/client
     restart: always
-    env_file: .env
     environment:
       USERS_SERVICE_URI: ${USERS_SERVICE_URI}
       LISTINGS_SERVICE_URI: ${LISTINGS_SERVICE_URI}
@@ -31,11 +28,8 @@ services:
   
   nginx_service:
     container_name: nginx_service
-    build: 
-      context: ..
-      dockerfile: services/nginx/Dockerfile
+    build: ./services/nginx
     restart: unless-stopped
-    env_file: .env
     volumes:
       # - ./gateway/client/build:/usr/share/nginx/html
       - web_root:/usr/share/nginx/html
@@ -73,12 +67,9 @@ services:
   
   users_service:
     container_name: users_service
-    build: 
-      context: ..
-      dockerfile: ./services/users/Dockerfile
+    build: ./services/users
     restart: unless-stopped
     # command: babel-watch -L src/index.js
-    env_file: .env
     environment:
       DB_URI: ${USERS_SERVICE_DB_URI}
       NODE_ENV: ${NODE_ENV}
@@ -96,7 +87,6 @@ services:
   users_service_db:
     container_name: users_service_db
     image: mysql:5.7.20
-    env_file: .env
     environment:
       MYSQL_ROOT_PASSWORD: ${USERS_SERVICE_DB_ROOT_PASSWORD}
       MYSQL_DATABASE: ${USERS_SERVICE_DB_ROOT_DATABASE}
@@ -111,12 +101,9 @@ services:
 
   listings_service:
     container_name: listings_service
-    build: 
-      context: ..
-      dockerfile: services/listings/Dockerfile
+    build: ./services/listings
     restart: unless-stopped
     # command: babel-watch -L src/index.js
-    env_file: .env
     environment:
       DB_URI: ${LISTINGS_SERVICE_DB_URI}
       NODE_ENV: ${NODE_ENV}
@@ -134,7 +121,6 @@ services:
   listings_service_db:
     container_name: listings_service_db
     image: mysql:5.7.20
-    env_file: .env
     environment:
       MYSQL_ROOT_PASSWORD: ${LISTINGS_SERVICE_DB_ROOT_PASSWORD}
       MYSQL_DATABASE: ${LISTINGS_SERVICE_DB_ROOT_DATABASE}
@@ -156,8 +142,7 @@ volumes:
     driver: local
     driver_opts:
       type: none
-      device: /home/dany/projects/github/seesee/gateway/client/build
-      # device: /home/ubuntu/seesee/gateway/client/build
+      device: /home/dany/projects/github/seesee/platforms/pwa/build/
       o: bind
 
   # dhparam:
@@ -165,7 +150,6 @@ volumes:
   #   driver_opts:
   #     type: none
   #     device: /home/dany/projects/github/seesee/services/nginx/certs
-  #     # device: /home/ubuntu/seesee/services/nginx/certs
   #     o: bind
 
 # ==========================================#
