--- a/gateway/client/Dockerfile
+++ b/gateway/client/Dockerfile
@@ -1,19 +1,18 @@
 FROM node:14
 
-RUN mkdir -p /home/node/app/node_modules && chown -R node:node /home/node/app
+RUN mkdir -p /home/node/app/node_modules && \
+  chown -R node:node /home/node/app
 
 WORKDIR /home/node/app
 
-COPY package.json ./
+COPY package.json /home/node/app/
 
 USER node
 
-RUN yarn
+RUN yarn install --production
 
 COPY --chown=node:node . .
 
 RUN yarn run build
-
-EXPOSE 3000
 
 CMD yarn watch
