--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -7,8 +7,10 @@ services:
 
   gateway_client:
     container_name: gateway_client
-    build: ./gateway/client
-    restart: always
+    build: 
+      context: "./gateway/client/"
+      dockerfile: "Dockerfile"
+    # restart: always
     environment:
       LISTINGS_SERVICE_URI: http://listings_service:7100
       USERS_SERVICE_URI: http://users_service:7101
@@ -17,7 +19,7 @@ services:
     ports:
       - 7000:7000
     volumes:
-      - ./gateway/client:/home/node/app
+      - ./gateway/client:/opt/app
     depends_on:
       - listings_service
       - users_service
@@ -61,8 +63,10 @@ services:
   
   users_service:
     container_name: users_service
-    build: ./services/users
-    restart: unless-stopped
+    build: 
+      context: "./services/users/"
+      dockerfile: "Dockerfile"
+    # restart: unless-stopped
     environment:
       - DB_URI=mysql://root:password@users_service_db/db?charset=UTF8
     expose: 
@@ -70,7 +74,7 @@ services:
     ports: 
       - 7101:7101
     volumes: 
-      - ./services/users:/home/node/app
+      - ./services/users:/opt/app
     depends_on:
       - users_service_db
     networks:
@@ -97,8 +101,10 @@ services:
 
   listings_service:
     container_name: listings_service
-    build: ./services/listings
-    restart: unless-stopped
+    build: 
+      context: "./services/listings/"
+      dockerfile: "Dockerfile"
+    # restart: unless-stopped
     environment:
       DB_URI: mysql://root:password@listings_service_db/db?charset=UTF8
     expose: 
@@ -106,7 +112,7 @@ services:
     ports: 
       - 7100:7100
     volumes: 
-      - ./services/listings:/home/node/app
+      - ./services/listings:/opt/app
     depends_on:
       - listings_service_db
     networks:
