--- a/services/nginx/conf.d/react.conf
+++ b/services/nginx/conf.d/react.conf
@@ -6,10 +6,8 @@ server {
     root   /usr/share/nginx/html;
     index  index.html index.htm;
     try_files $uri $uri/ /index.html;
-
-     #proxy_pass http://192.168.151.107:3030/;
+    #proxy_pass http://192.168.151.107:3030/;
   }
-
 
   error_page   500 502 503 504  /50x.html;
 
@@ -18,10 +16,8 @@ server {
   }
 }
 
-
+# nginx as a load balancer with proxy
 upstream backend {
-
-  # nginx as a load balancer with proxy
   ip_hash;
   server 192.168.0.1:31300 weight=5;
   server 192.168.0.1:31301 weight=1;
@@ -29,13 +25,12 @@ upstream backend {
 
 }
 
-
 proxy_cache_path /etc/nginx/cache keys_zone=my_cache:10m max_size=100m inactive=60m use_temp_path=off;
-# nginx as a reverse proxy
-# this will route our frontend requests to the backend on port 4008
+
+# nginx as a reverse proxy this will route our frontend requests 
+# to the backend on port 4008
 server {
   listen 9090;
-
   location / {
         proxy_cache my_cache;
         proxy_cache_valid 200 30s;
