--- a/platforms/pwa/package.json
+++ b/platforms/pwa/package.json
@@ -4,10 +4,10 @@
   "main": "index.js",
   "author": "Dany Dodson",
   "description": "platforms-pwa",
+  "license": "MIT",
   "scripts": {
     "build": "sudo rm -rf build && NODE_ENV=production parcel build src/index.html -d build/bundle --cache-dir build/cache",
     "watch": "sudo rm -rf build && parcel --port=7001 src/index.html -d build/output --cache-dir build/cache",
-    "pre-deploy": "yarn build",
     "deploy": "./deploy.sh"
   },
   "dependencies": {
@@ -31,6 +31,5 @@
   },
   "alias": {
     "#root": "./src"
-  },
-  "license": "MIT"
+  }
 }
