--- a/services/nginx/conf/default.conf
+++ b/services/nginx/conf/default.conf
@@ -1,10 +1,8 @@
-events {
-    worker_connections 768; 
-    # multi_accept on;
-}
+
+events { worker_connections 768;}
 
 http {
-    
+
   server {
 
     listen 80 default_server;
@@ -13,32 +11,18 @@ http {
     root /usr/share/nginx/html;
     index index.html index.htm;
 
-    ##
-    # app
-    ##
     location / {
-            try_files $uri /index.html;
+      try_files $uri /index.html;
     }
     
-    ##
-    # app/users
-    ##
     location /users {
       proxy_pass http://users_service:7101;
-      # proxy_pass http://users_service:7201;
     }
     
-    ##
-    # app/listings
-    ##
     location /listings {
       proxy_pass http://listings_service:7100;
-      # proxy_pass http://users_service:7200;
     }
     
-    ##
-    # Basic Settings
-    ##
     sendfile on;
     tcp_nopush on;
     tcp_nodelay on;
@@ -50,21 +34,12 @@ http {
     include /etc/nginx/mime.types;
     default_type application/octet-stream;
  
-    ##
-    # SSL Settings
-    ##
     ssl_protocols TLSv1 TLSv1.1 TLSv1.2; # Dropping SSLv3, ref: POODLE
     ssl_prefer_server_ciphers on;
  
-    ##
-    # Logging Settings
-    ##
     access_log /var/log/nginx/access.log;
     error_log /var/log/nginx/error.log;
  
-    # ##
-    # Gzip Settings
-    # ##
     gzip on;
     gzip_disable "msie6";
     gzip_vary on;
@@ -74,9 +49,6 @@ http {
     gzip_http_version 1.1;
     gzip_types text/plain text/css application/json application/javascript text/xml application/xml application/xml+rss text/javascript;
  
-    ##
-    # Virtual Host Configs
-    ##
     # include /etc/nginx/conf.d/*.conf;
     # include /etc/nginx/sites-enabled/*;
     }
