--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -26,16 +26,16 @@ services:
   #  services/nginx                           #
   # ==========================================#
   
-  # nginx_service:
-  #   container_name: nginx_service
-  #   build: ./services/nginx
-  #   restart: unless-stopped
-  #   expose:
-  #     - '80'
-  #   ports:
-  #     - '80:80'
-  #   networks:
-  #     - api_network
+  nginx_service:
+    container_name: nginx_service
+    build: ./services/nginx
+    restart: unless-stopped
+    expose:
+      - 80
+    ports:
+      - 80:80
+    networks:
+      - api_network
 
   # ==========================================#
   #  services/users                           #
