--- a/platforms/pwa/package.json
+++ b/platforms/pwa/package.json
@@ -7,7 +7,7 @@
   "license": "MIT",
   "scripts": {
     "clean": "sudo rm -rf build",
-    "build": "yarn clean && NODE_ENV=production parcel build src/index.html -d build/output --cache-dir build/cache",
+    "build": "NODE_ENV=production parcel build src/index.html -d build/output --cache-dir build/cache",
     "watch": "yarn clean && parcel --port=7001 src/index.html -d build/output --cache-dir build/cache"
   },
   "dependencies": {
