--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -30,6 +30,8 @@ services:
     container_name: nginx_service
     build: ./services/nginx
     restart: unless-stopped
+    volumes: 
+      - ./platforms/pwa:/usr/src/app
     expose:
       - 80
     ports:
