--- a/platforms/pwa/package.json
+++ b/platforms/pwa/package.json
@@ -17,6 +17,7 @@
     "apollo-link-http": "~1.5.16",
     "graphql": "^0.9.0 || ^0.10.0 || ^0.11.0 || ^0.12.0 || ^0.13.0 || ^14.0.0",
     "graphql-tag": "~2.10.1",
+    "parcel-bundler": "~1.12.4",
     "react": "^16.8.0",
     "react-apollo": "~3.1.3",
     "react-dom": ">= 16.3.0",
@@ -25,9 +26,6 @@
     "redux": "^2.0.0 || ^3.0.0 || ^4.0.0-0",
     "styled-components": "~4.4.1",
     "yup": "~0.28.0"
-  },
-  "devDependencies": {
-    "parcel-bundler": "~1.12.4"
   },
   "alias": {
     "#root": "./src"
