--- a/gateway/client/package.json
+++ b/gateway/client/package.json
@@ -4,11 +4,10 @@
   "main": "index.js",
   "author": "Dany Dodson",
   "description": "gateway-client",
+  "license": "MIT",
   "scripts": {
     "build": "webpack --progress",
-    "deploy": "node-deploy $(pwd)",
-    "watch": "babel-watch -L src/index.js",
-    "linkall": "yarn link node-deploy"
+    "watch": "babel-watch -L src/index.js"
   },
   "dependencies": {
     "@babel/core": "~7.9.6",
@@ -29,7 +28,5 @@
     "webpack": "~4.43.0",
     "webpack-cli": "~3.3.11",
     "webpack-node-externals": "~1.7.2"
-  },
-  "devDependencies": {},
-  "license": "MIT"
+  }
 }
