--- a/services/nginx/conf/default.conf
+++ b/services/nginx/conf/default.conf
@@ -5,8 +5,9 @@ http {
 
   server {
 
-    listen 80 default_server;
-    listen [::]:80 default_server;
+    listen 80;
+    # listen 80 default_server;
+    # listen [::]:80 default_server;
 
     root /usr/share/app/pwa/build/output;
     index index.html index.htm;
@@ -16,8 +17,8 @@ http {
     }
     
     location /users {
-      # proxy_pass http://users_service:7101;
-      proxy_pass http://users_service:7201;
+      proxy_pass http://users_service:7101;
+      # proxy_pass http://users_service:7201;
       proxy_set_header   Host $host;
       proxy_set_header   X-Real-IP $remote_addr;
       proxy_set_header   X-Forwarded-For $proxy_add_x_forwarded_for;
@@ -25,8 +26,8 @@ http {
     }
     
     location /listings {
-      # proxy_pass http://listings_service:7100;
-      proxy_pass http://listings_service:7200;
+      proxy_pass http://listings_service:7100;
+      # proxy_pass http://listings_service:7200;
       proxy_set_header   Host $host;
       proxy_set_header   X-Real-IP $remote_addr;
       proxy_set_header   X-Forwarded-For $proxy_add_x_forwarded_for;
