--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -7,10 +7,12 @@ services:
 
   gateway_client:
     container_name: gateway_client
-    build: ./gateway/client
+    build: ./gateway/client/
     environment:
       LISTINGS_SERVICE_URI: http://listings_service:7100
       USERS_SERVICE_URI: http://users_service:7101
+    # volumes: 
+    #   - ./gateway/client:/usr/src/app
     ports:
       - 7000:7000
     depends_on:
@@ -43,6 +45,8 @@ services:
     build: ./services/users/
     environment:
       - DB_URI=mysql://root:password@users_service_db/db?charset=UTF8
+    # volumes: 
+    #   - ./services/users:/usr/src/app
     ports: 
       - 7101:7101
     depends_on:
@@ -71,9 +75,11 @@ services:
 
   listings_service:
     container_name: listings_service
-    build: ./services/listings
+    build: ./services/listings/
     environment:
       DB_URI: mysql://root:password@listings_service_db/db?charset=UTF8
+    # volumes: 
+    #   - ./services/listings:/usr/src/app
     ports: 
       - 7100:7100
     depends_on:
