--- a/services/listings/Dockerfile
+++ b/services/listings/Dockerfile
@@ -1,14 +1,15 @@
 FROM node:14
 
-RUN apt-get update && \
-  apt-get upgrade 
+RUN mkdir -p /usr/src/app/node_modules
+COPY . /usr/src/app/
 
 WORKDIR /usr/src/app
+
+ENV PATH /usr/src/app/node_modules/.bin:$PATH
 
 COPY yarn* /usr/src/app/
 COPY package* /usr/src/app/
 
 RUN yarn install
-RUN yarn build
 
 CMD ["yarn", "watch"]
