--- a/gateway/client/package.json
+++ b/gateway/client/package.json
@@ -7,7 +7,7 @@
   "license": "MIT",
   "scripts": {
     "build": "webpack --progress",
-    "watch": "node_modules/.bin/babel-watch -L src/index.js"
+    "watch": "babel-watch -L src/index.js"
   },
   "dependencies": {
     "@babel/core": "~7.9.6",
