--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -39,4 +39,10 @@
   "favorites.storageFilePath": "../../working/.favorites.json",
   // git settings
   "git.ignoreLimitWarning": true,
+  "search.exclude": {
+    "**/build": true,
+    "**/node_modules": true,
+    "**/yarn-error.log": true,
+    "**/yarn.lock": true
+  }
 }
