--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -11,15 +11,15 @@ services:
     environment:
       LISTINGS_SERVICE_URI: http://listings_service:7100
       USERS_SERVICE_URI: http://users_service:7101
+    # volumes: 
+    #   - ./gateway/client:/usr/src/app
     ports:
-      - "9000:9000"
+      - "7000:7000"
     depends_on:
       - listings_service
       - users_service
-    # volumes: 
-    #   - ./gateway/client:/usr/src/app
     networks:
-      - api_net
+      - services_network
 
   # ==========================================#
   #  services/users                           #
@@ -30,14 +30,14 @@ services:
     build: ./services/users/
     environment:
       - DB_URI=mysql://root:password@users_service_db/db?charset=UTF8
+    # volumes: 
+    #   - ./services/users:/usr/src/app
     ports: 
       - "7101:7101"
     depends_on:
       - users_service_db
-    # volumes: 
-    #   - ./services/users:/usr/src/app
     networks:
-      - api_net
+      - services_network
 
   # ==========================================#
   #  services/users:db                        #
@@ -52,40 +52,40 @@ services:
     ports:
       - "0.0.0.0:7201:3306"
     networks:
-      - api_net
+      - services_network
 
   # ==========================================#
   #  services/listings                        #
   # ==========================================#
 
-  # listings_service:
-  #   container_name: listings_service
-  #   build: ./services/listings/
-  #   environment:
-  #     DB_URI: mysql://root:password@listings_service_db/db?charset=UTF8
-  #   # volumes: 
-  #   #   - ./services/listings:/usr/src/app
-  #   ports: 
-  #     - 7100:7100
-  #   depends_on:
-  #     - listings_service_db
-  #   networks:
-  #     - api_net
+  listings_service:
+    container_name: listings_service
+    build: ./services/listings/
+    environment:
+      DB_URI: mysql://root:password@listings_service_db/db?charset=UTF8
+    # volumes: 
+    #   - ./services/listings:/usr/src/app
+    ports: 
+      - 7100:7100
+    depends_on:
+      - listings_service_db
+    networks:
+      - services_network
 
   # ==========================================#
   #  services/listings:db                     #
   # ==========================================#
 
-  # listings_service_db:
-  #   container_name: listings_service_db
-  #   image: mysql:5.7.20
-  #   environment:
-  #     MYSQL_DATABASE: db
-  #     MYSQL_ROOT_PASSWORD: password
-  #   ports:
-  #     - 0.0.0.0:7200:3306
-  #   networks:
-  #     - api_net
+  listings_service_db:
+    container_name: listings_service_db
+    image: mysql:5.7.20
+    environment:
+      MYSQL_DATABASE: db
+      MYSQL_ROOT_PASSWORD: password
+    ports:
+      - 0.0.0.0:7200:3306
+    networks:
+      - services_network
 
   # ==========================================#
   #  services/nginx                           #
@@ -100,7 +100,7 @@ services:
   #   ports:
   #     - 80:80
   #   networks:
-  #     - api_net
+  #     - services_network
 
 # ==========================================#
 #  global volumes                           #
@@ -111,7 +111,5 @@ services:
 # ==========================================#
   
 networks:
-  service_net:
-    driver: bridge
-  api_net:
+  services_network:
     driver: bridge
