--- a/gateway/client/Dockerfile
+++ b/gateway/client/Dockerfile
@@ -1,16 +1,14 @@
 FROM node:14
 
-RUN mkdir -p /usr/src/app/node_modules
-COPY . /usr/src/app/
-
+RUN mkdir -p /usr/src/app
 WORKDIR /usr/src/app
-
-ENV PATH /usr/src/app/node_modules/.bin:$PATH
 
 COPY yarn* /usr/src/app/
 COPY package* /usr/src/app/
 
 RUN yarn install
+
+COPY . /usr/src/app/
 
 # EXPOSE 3000
 
