--- a/services/users/Dockerfile
+++ b/services/users/Dockerfile
@@ -1,15 +1,13 @@
 FROM node:14
 
-RUN mkdir -p /usr/src/app/node_modules
-COPY . /usr/src/app/
-
+RUN mkdir -p /usr/src/app
 WORKDIR /usr/src/app
-
-ENV PATH /usr/src/app/node_modules/.bin:$PATH
 
 COPY yarn* /usr/src/app/
 COPY package* /usr/src/app/
 
 RUN yarn install
+
+COPY . /usr/src/app/
 
 CMD ["yarn", "watch"]
