--- a/platforms/pwa/package.json
+++ b/platforms/pwa/package.json
@@ -4,9 +4,11 @@
   "main": "index.js",
   "author": "Dany Dodson",
   "description": "platforms-pwa",
+  "license": "MIT",
   "scripts": {
-    "build": "webpack --config webpack.config.prod.js --progress",
-    "watch": "webpack-dev-server"
+    "dev": "webpack-dev-server",
+    "watch": "webpack --config webpack.config.js",
+    "build": "webpack --config webpack.config.prod.js"
   },
   "dependencies": {
     "@types/react": "^16.8.0",
@@ -16,7 +18,6 @@
     "dotenv": "8.2.0",
     "graphql": "^0.9.0 || ^0.10.0 || ^0.11.0 || ^0.12.0 || ^0.13.0 || ^14.0.0",
     "graphql-tag": "~2.10.1",
-    "parcel-bundler": "~1.12.4",
     "react": "^16.8.0",
     "react-apollo": "~3.1.3",
     "react-dom": ">= 16.3.0",
@@ -27,12 +28,17 @@
     "yup": "~0.28.0"
   },
   "devDependencies": {
-    "@babel/core": "^7.2.2",
-    "@babel/preset-env": "^7.3.1",
-    "babel-loader": "^8.0.5",
-    "webpack": "^4.29.0",
-    "webpack-cli": "^3.2.1",
-    "webpack-dev-server": "^3.1.14"
-  },
-  "license": "MIT"
+    "@babel/core": "^7.10.2",
+    "@babel/polyfill": "^7.10.1",
+    "@babel/preset-env": "^7.10.2",
+    "@babel/preset-react": "^7.10.1",
+    "babel-loader": "^8.1.0",
+    "babel-plugin-module-resolver": "^4.0.0",
+    "babel-plugin-styled-components": "^1.10.7",
+    "babel-watch": "^7.0.0",
+    "webpack": "^4.43.0",
+    "webpack-cli": "^3.3.11",
+    "webpack-dev-server": "^3.11.0",
+    "webpack-node-externals": "^1.7.2"
+  }
 }
