--- a/platforms/pwa/package.json
+++ b/platforms/pwa/package.json
@@ -6,9 +6,9 @@
   "description": "platforms-pwa",
   "license": "MIT",
   "scripts": {
-    "dev": "webpack-dev-server",
+    "dev": "rm -rf build && webpack-dev-server",
     "watch": "webpack --config webpack.config.js",
-    "build": "webpack --config webpack.config.prod.js"
+    "build": "rm -rf build && webpack --config webpack.config.prod.js"
   },
   "dependencies": {
     "@types/react": "^16.8.0",
@@ -35,7 +35,6 @@
     "babel-loader": "^8.1.0",
     "babel-plugin-module-resolver": "^4.0.0",
     "babel-plugin-styled-components": "^1.10.7",
-    "babel-watch": "^7.0.0",
     "webpack": "^4.43.0",
     "webpack-cli": "^3.3.11",
     "webpack-dev-server": "^3.11.0",
