--- a/services/users/package.json
+++ b/services/users/package.json
@@ -12,12 +12,6 @@
     "db:migrate:undo": "sequelize db:migrate:undo"
   },
   "dependencies": {
-    "@babel/core": "~7.7.7",
-    "@babel/polyfill": "~7.7.0",
-    "@babel/preset-env": "~7.7.7",
-    "babel-loader": "~8.0.6",
-    "babel-plugin-module-resolver": "~4.0.0",
-    "babel-watch": "~7.0.0",
     "bcryptjs": "~2.4.3",
     "cors": "~2.8.5",
     "date-fns": "~2.8.1",
@@ -27,7 +21,15 @@
     "nodemon": "^2.0.2",
     "sequelize": "~5.21.3",
     "sequelize-cli": "~5.5.1",
-    "uuid": "~3.3.3",
+    "uuid": "~3.3.3"
+  },
+  "devDependencies": {
+    "@babel/core": "~7.7.7",
+    "@babel/polyfill": "~7.7.0",
+    "@babel/preset-env": "~7.7.7",
+    "babel-loader": "~8.0.6",
+    "babel-plugin-module-resolver": "~4.0.0",
+    "babel-watch": "~7.0.0",
     "webpack": "~4.41.5",
     "webpack-cli": "~3.3.10",
     "webpack-node-externals": "~1.7.2"
