--- a/.travis/.travis.yml
+++ b/.travis/.travis.yml
@@ -1,7 +1,21 @@
-language:
-  node_js
-install:
-  - npm install -g codecov
+sudo: required
+
+services: 
+  - docker
+
+before_install:
+  — docker build -t danydodson/react-test -f ./client/Dockerfile.dev ./client
+
 script:
-  - istanbul cover ./node_modules/mocha/bin/_mocha --reporter lcovonly -- -R spec
-  - codecov
+  — docker run -e CI=true danydodson/react-test npm run test — — coverage
+
+after_success:
+  — docker build -t danydodson/multi-nginx ./nginx
+  — docker build -t danydodson/multi-server ./server
+  — docker build -t danydodson/multi-client ./client
+  # Login to the docker CLI
+  — echo “$DOCKER_PASSWORD” | docker login -u “$DOCKER_ID” — password-stdin
+  # Take these images and push them to Docker Hub
+  — docker push danydodson/multi-nginx
+  — docker push danydodson/multi-server
+  — docker push danydodson/multi-client
